tests/dataset/tpc-ds/compiler/go/q57.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq572820118301/001/main.go:343:2: syntax error: unexpected name at64 after top level declaration
